--- a/src/template.html
+++ b/src/template.html
@@ -1,9 +1,23 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Battleship</title>
   </head>
-  <body></body>
+  <body>
+    <header class="header">
+      <div class="header-title">Battleship</div>
+    </header>
+    <main id="main" class="main">
+      <section id="sec1" class="main-sec">
+        <div id="player1NameEl" class="player-name">Player 1</div>
+        <div id="player1GameBoardEl" class="game-board"></div>
+      </section>
+      <section id="sec2" class="main-sec">
+        <div id="player2NameEl" class="player-name">Player 2</div>
+        <div id="player2GameBoardEl" class="game-board"></div>
+      </section>
+    </main>
+  </body>
 </html>
