Display winner at game end

--- a/src/template.html
+++ b/src/template.html
@@ -14,6 +14,9 @@
         <div id="player1NameEl" class="player-name">Player 1</div>
         <div id="player1GameBoardEl" class="game-board"></div>
       </section>
+      <section id="notif" class="notif">
+        <div id="notifText" class="notif-text"></div>
+      </section>
       <section id="sec2" class="main-sec">
         <div id="player2NameEl" class="player-name">Player 2</div>
         <div id="player2GameBoardEl" class="game-board"></div>
