Add reset button

--- a/src/template.html
+++ b/src/template.html
@@ -16,6 +16,7 @@
       </section>
       <section id="notif" class="notif">
         <div id="notifText" class="notif-text"></div>
+        <button id="resetBtn" class="reset-btn">Reset Game</button>
       </section>
       <section id="sec2" class="main-sec">
         <div id="player2NameEl" class="player-name">Player 2</div>
