Improve cell coloring for better feedback

--- a/src/template.html
+++ b/src/template.html
@@ -12,7 +12,10 @@
     <main id="main" class="main">
       <section id="sec1" class="main-sec">
         <div id="player1NameEl" class="player-name">Player 1</div>
-        <div id="player1GameBoardEl" class="game-board"></div>
+        <div
+          id="player1GameBoardEl"
+          class="game-board player1-game-board"
+        ></div>
       </section>
       <section id="notif" class="notif">
         <div id="notifText" class="notif-text"></div>
@@ -20,7 +23,10 @@
       </section>
       <section id="sec2" class="main-sec">
         <div id="player2NameEl" class="player-name">Player 2</div>
-        <div id="player2GameBoardEl" class="game-board"></div>
+        <div
+          id="player2GameBoardEl"
+          class="game-board player2-game-board"
+        ></div>
       </section>
     </main>
   </body>
